完成测量工具箱

--- a/src/assets/icon/iconfont.css
+++ b/src/assets/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4022052 */
-  src: url('iconfont.woff2?t=1681787871925') format('woff2'),
-       url('iconfont.woff?t=1681787871925') format('woff'),
-       url('iconfont.ttf?t=1681787871925') format('truetype');
+  src: url('iconfont.woff2?t=1682071441853') format('woff2'),
+       url('iconfont.woff?t=1682071441853') format('woff'),
+       url('iconfont.ttf?t=1682071441853') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,82 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-shebeileiqiujigis:before {
+  content: "\ea18";
+}
+
+.icon-icon-GIS_renyuanjiankong:before {
+  content: "\e603";
+}
+
+.icon-icon-GIS_tuceng:before {
+  content: "\e607";
+}
+
+.icon-fanguang:before {
+  content: "\e64a";
+}
+
+.icon-juanlian:before {
+  content: "\e6ab";
+}
+
+.icon-mianguangyuan:before {
+  content: "\e610";
+}
+
+.icon-sanweikeshihua:before {
+  content: "\e6d2";
+}
+
+.icon-moxingyaping:before {
+  content: "\ec48";
+}
+
+.icon-dianguangyuan-01:before {
+  content: "\e66a";
+}
+
+.icon-bimgis_xianshi:before {
+  content: "\e6f4";
+}
+
+.icon-bimgis_jiemianfenxi:before {
+  content: "\e6f5";
+}
+
+.icon-bimgis_yincang:before {
+  content: "\e6f7";
+}
+
+.icon-36guangyuangaodu:before {
+  content: "\e608";
+}
+
+.icon-moxingfenxi:before {
+  content: "\e67e";
+}
+
+.icon-shouye-moxingfenxi:before {
+  content: "\e6e4";
+}
+
+.icon-keshiyufenxi:before {
+  content: "\e605";
+}
+
+.icon-a-3Dcelianggongju:before {
+  content: "\e8e9";
+}
+
+.icon-jiankongshipin:before {
+  content: "\e639";
+}
+
+.icon-tongshifenxi:before {
+  content: "\e6ac";
 }
 
 .icon-guanbi:before {
